test/module/inconsistent_abbrev.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< ppap >>= exec (Hol.main --test)
Hol =<< Hol> Compiling test.module.inconsistent_abbrev ( test/module/inconsistent_abbrev.hol, interpreted )
[test.module.inconsistent_abbrev]:5:1-5:32: error: [HolBETA2-ModuleError]
   |                                 
 5 | import test.module.inc_abbrev_b.
   | ^                               
Import inconsistency (C3): `pair' is declared by both `test.module.inc_abbrev_a' and `test.module.inc_abbrev_b' with disagreeing abbreviation. (`test.module.inc_abbrev_a': <prior body>; `test.module.inc_abbrev_b': <current body>.)

Hol =<< Hol >>= quit
